IF(NOT InMMEX)
    MESSAGE(FATAL_ERROR "Use the top-level CMake script!")
ENDIF(NOT InMMEX)

SET(GUI_XRC_FILES
  ./guiTestAboutDlg.xrc)

FOREACH(xrc ${GUI_XRC_FILES})
    GET_FILENAME_COMPONENT(name "${xrc}" NAME_WE)
    WXWIDGETS_ADD_RESOURCES(GUI_SOURCES "${xrc}" OPTIONS -e -n "${name}Init" -o "${name}.cpp")
ENDFOREACH()

ADD_LIBRARY(GUI OBJECT ${GUI_SOURCES})
TARGET_INCLUDE_DIRECTORIES(GUI PRIVATE ${wxWidgets_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(GUI PRIVATE ${wxWidgets_CXX_FLAGS})
TARGET_COMPILE_DEFINITIONS(GUI PRIVATE ${wxWidgets_DEFINITIONS}
    wxNO_UNSAFE_WXSTRING_CONV=1
    $<$<CONFIG:Debug>:${wxWidgets_DEFINITIONS_DEBUG}>)

TARGET_SOURCES(${MMEX_EXE} PRIVATE $<TARGET_OBJECTS:GUI>)
TARGET_INCLUDE_DIRECTORIES(${MMEX_EXE} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
